--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link
       rel="stylesheet"
@@ -13,6 +14,11 @@
       referrerpolicy="no-referrer"
     />
     <title>evote</title>
+    <style>
+      .selector-for-some-widget {
+        box-sizing: content-box;
+      }
+    </style>
   </head>
   <body>
     <noscript>
